[gd_scene load_steps=17 format=3 uid="uid://bvofog5cxvno8"]

[ext_resource type="Script" path="res://scripts/entities/skeleton.gd" id="1_gep1k"]
[ext_resource type="Texture2D" uid="uid://cosmvuovo0u32" path="res://graphs/png/Enemys/Skeleton enemy/Skeleton enemy.png" id="2_4utay"]
[ext_resource type="Script" path="res://scripts/components/RichTextLabel.gd" id="3_3bwqj"]
[ext_resource type="Script" path="res://scripts/components/HurtboxComponent.gd" id="3_i3cgn"]
[ext_resource type="Script" path="res://scripts/components/HitboxComponent.gd" id="4_xnfj1"]
[ext_resource type="PackedScene" uid="uid://t4j7nk4uuk3n" path="res://scenes/components/HealthComponent.tscn" id="5_acdkq"]
[ext_resource type="Script" path="res://scripts/components/AttackComponent.gd" id="7_hw3bw"]

[sub_resource type="Animation" id="Animation_rvq3t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_lyq1f"]
resource_name = "idle"
length = 1.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12]
}

[sub_resource type="Animation" id="Animation_5n4gs"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_nsajm"]
resource_name = "hurt"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_x00xo"]
resource_name = "idle"
length = 0.40001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qc5pv"]
_data = {
"RESET": SubResource("Animation_rvq3t"),
"attack": SubResource("Animation_lyq1f"),
"die": SubResource("Animation_5n4gs"),
"hurt": SubResource("Animation_nsajm"),
"idle": SubResource("Animation_x00xo")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_up7ql"]
radius = 7.75

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkw4v"]
size = Vector2(100, 164)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bchs7"]
radius = 19.3989
height = 113.52

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_gep1k")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_4utay")
hframes = 13
vframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_qc5pv")
}

[node name="HurtBox" type="Area2D" parent="Sprite2D" node_paths=PackedStringArray("health_component")]
visible = false
collision_layer = 8
collision_mask = 9
script = ExtResource("3_i3cgn")
health_component = NodePath("../../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
shape = SubResource("CapsuleShape2D_up7ql")

[node name="HitboxComponent" type="Area2D" parent="Sprite2D" node_paths=PackedStringArray("attack_component")]
collision_layer = 8
collision_mask = 9
script = ExtResource("4_xnfj1")
attack_component = NodePath("../../AttackComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HitboxComponent"]
position = Vector2(21, -2)
scale = Vector2(0.25, 0.25)
shape = SubResource("RectangleShape2D_bkw4v")
disabled = true
debug_color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1.19209e-07)
scale = Vector2(1.54648, 1.05708)
shape = SubResource("CapsuleShape2D_bchs7")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -21.0
offset_top = -130.0
offset_right = 19.0
offset_bottom = -90.0
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("3_3bwqj")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("SpriteAnimPlayer") instance=ExtResource("5_acdkq")]
MAX_HEALTH = 100
SpriteAnimPlayer = NodePath("../Sprite2D/AnimationPlayer")

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("7_hw3bw")
attack_damage = 1

[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="Sprite2D/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="Sprite2D/HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
